# FluidSynthPlugin

./: .gitattributes  README.md
.github/workflows/: cmake_all_platforms.yml
_DISTRIBUTION/targetPlatforms/Windows-AMD64/Release/VST3/FluidSynthPlugin.vst3/Contents/x86_64-win/: FluidSynthPlugin.vst3
_DISTRIBUTION/test/: makeTestFiles.bat  makeTestFiles.sh  testFluidSynth.RPP
buildSetup/: CMakeLists.txt  CPPCompilerConfiguration.cmake  GlobalSettings.cmake  LocalConfiguration.cmake  PluginCPPCompilerSettings.cmake
buildSetup/MacOS/: adaptLibraryFileLinkage.sh
buildSetup/MacOSX/: Info.plist.in  adaptLibraryFileLinkage.sh
doc/doxygen/: FluidSynthPlugin-doxygen-FULL.cfg.in  mainPage.md
doc/latex/: FluidSynthPlugin-documentation.ltx
internalDocumentation/html/: _8_0g_midi_event_converter_8h_source.html  _8_0g_string_list_8h_source.html  _assertion_8h.html  _assertion_8h__dep__incl.map  _assertion_8h__dep__incl.md5  _assertion_8h__incl.map  _assertion_8h__incl.md5  _assertion_8h_source.html  _audio_sample_8h.html  _audio_sample_8h.js  _audio_sample_8h__dep__incl.map  _audio_sample_8h__dep__incl.md5  _audio_sample_8h__incl.map  _audio_sample_8h__incl.md5  _audio_sample_8h_source.html  _audio_sample_fifo_queue_8cpp-inc.html  _audio_sample_fifo_queue_8cpp-inc.js  _audio_sample_fifo_queue_8cpp-inc__dep__incl.map  _audio_sample_fifo_queue_8cpp-inc__dep__incl.md5  _audio_sample_fifo_queue_8cpp-inc__incl.map  _audio_sample_fifo_queue_8cpp-inc__incl.md5  _audio_sample_fifo_queue_8cpp-inc_source.html  _audio_sample_fifo_queue_8cpp.html  _audio_sample_fifo_queue_8cpp__incl.map  _audio_sample_fifo_queue_8cpp__incl.md5  _audio_sample_fifo_queue_8h.html  _audio_sample_fifo_queue_8h.js  _audio_sample_fifo_queue_8h__dep__incl.map  _audio_sample_fifo_queue_8h__dep__incl.md5  _audio_sample_fifo_queue_8h__incl.map  _audio_sample_fifo_queue_8h__incl.md5  _audio_sample_fifo_queue_8h_source.html  _audio_sample_fifo_queue_vector_8cpp-inc.html  _audio_sample_fifo_queue_vector_8cpp-inc.js  _audio_sample_fifo_queue_vector_8cpp-inc__dep__incl.map  _audio_sample_fifo_queue_vector_8cpp-inc__dep__incl.md5  _audio_sample_fifo_queue_vector_8cpp-inc__incl.map  _audio_sample_fifo_queue_vector_8cpp-inc__incl.md5  _audio_sample_fifo_queue_vector_8cpp-inc_source.html  _audio_sample_fifo_queue_vector_8cpp.html  (+1568 more)
internalDocumentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+103 more)
libraries/Darwin-x86_64/: libFLAC.12.dylib  libFLAC.8.dylib  libSDL2-2.0.0.dylib  libffi.8.dylib  libfluidsynth.3.dylib  libglib-2.0.0.dylib  libgobject-2.0.0.dylib  libgthread-2.0.0.dylib  libiconv.2.dylib  libintl.8.dylib  libmp3lame.0.dylib  libmpg123.0.dylib  libncurses.6.dylib  libogg.0.dylib  libopus.0.dylib  libpcre.1.dylib  libpcre2-8.0.dylib  libreadline.8.dylib  libsndfile.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib
libraries/Linux-x86_64/: libfluidsynth.so.3
misc/: ForceToFluidsynthRaster.lua
src/Audio/: AudioSampleFifoQueue.cpp  AudioSampleFifoQueue.cpp-inc  AudioSampleFifoQueue.h  AudioSampleFifoQueueVector.cpp  AudioSampleFifoQueueVector.cpp-inc  AudioSampleFifoQueueVector.h  AudioSampleList.cpp-inc  AudioSampleList.h  WaveFile.cpp  WaveFile.h
src/BaseModules/: CommandLineArguments.cpp  CommandLineArguments.h  Environment.cpp  Environment.h  File.cpp  Logging.h  LoggingSupport.cpp  LoggingSupport.h  MyWindows.h  OperatingSystem.cpp  OperatingSystem.h  StringUtil.cpp  StringUtil.h
src/BaseTypes/Containers/: ByteList.cpp  ByteList.h  Dictionary.cpp  Dictionary.h  IntegerList.h  MyArray.h  NaturalList.h  NaturalSet.h  RealList.h  StringList.cpp  StringList.h
src/BaseTypes/GenericTypes/: GenericList.h  GenericSet.h
src/BaseTypes/Primitives/: MyString.cpp  Natural.h  Real.cpp  Real.h  TimeAndDuration.cpp  TimeAndDuration.h
src/Libraries/: DynamicLibrary.cpp  DynamicLibrary.h  MyWindows.h  _NAMESPACE.desc
src/Libraries/FluidSynth/: FluidSynth.cpp  FluidSynth.h  FluidSynthSettings.cpp  FluidSynthSettings.h  FluidSynthSoundFont.cpp  FluidSynthSoundFont.h  FluidSynthSynthesizer.cpp  FluidSynthSynthesizer.h  _NAMESPACE.desc
src/Libraries/JuceFacade/: JuceHeaders.h  include_juce_audio_plugin_client_AU.r  include_juce_core_compilationtime.cpp  include_juce_graphics_harfbuzz.cpp
src/MIDI/: MidiEvent.cpp  MidiEvent.h  MidiEventConverter.cpp  MidiEventConverter.h  MidiEventList.cpp  MidiEventList.h  MidiFile.cpp  MidiFile.h  MidiPresetIdentification.cpp  MidiPresetIdentification.h  _NAMESPACE.desc
src/Main/: BuildInformation.cpp  BuildInformation.h  _NAMESPACE.desc
src/Main/FluidSynthFileConverter/: FluidSynthFileConverter.cpp  FluidSynthFileConverter.h  MainStub.cpp  _NAMESPACE.desc
src/Main/FluidSynthPlugin/: FluidSynthPlugin_Editor.cpp  FluidSynthPlugin_Editor.h  FluidSynthPlugin_EditorSupport.cpp  FluidSynthPlugin_EditorSupport.h  FluidSynthPlugin_EventProcessor.cpp  FluidSynthPlugin_EventProcessor.h  JucePlugin-AU_1.mm  JucePlugin-AU_2.mm  JucePlugin-Standalone.cpp  JucePlugin-VST_1.cpp  JucePlugin-VST_1.mm  JucePlugin-VST_2.cpp  JucePlugin-VST_2.mm  JucePlugin-util.cpp  JucePluginDefines.h  _NAMESPACE.desc  resources.rc
test/: makeTestFiles.bat  makeTestFiles.sh  makeTestFiles.sh.in  testFluidSynth-44100.rpp  testFluidSynth-48000-VST3.rpp  testFluidSynth-48000-singleVoice-AU.rpp  testFluidSynth-48000-singleVoice-VST3.rpp  testFluidSynth-48000.rpp  test_bass.mid  test_drums.mid  test_keyboard.mid
